# shikimori-py

./: README.md  example.py  pyproject.toml
shikimori_py/: __init__.py  config.json  oauth.py  types.py
